# artificial_writer

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  app.py  file.py  file_handler.py  generated_text.txt  main.py  original_text.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  run_gui.py  run_web.py  text_fetcher.py  writer.py
.github/workflows/: ci.yml
infra/: Dockerfile  docker-compose.yml  entrypoint.sh
migrations/: env.py
migrations/versions/: 0001_initial.py
src/artificial_writer/: __init__.py  __main__.py  cli.py  fetcher.py  gui.py  pipeline.py
src/artificial_writer/cli/: __init__.py  __main__.py  app.py
src/artificial_writer/core/: __init__.py  config.py  errors.py  fetcher.py  output_format.py  pipeline.py  storage.py
src/artificial_writer/core/fetchers/: __init__.py  base.py  html.py  pdf.py  registry.py  youtube.py
src/artificial_writer/core/summarizers/: __init__.py  anthropic_provider.py  base.py  extractive.py  factory.py  ollama.py  openai_provider.py  pricing.py  prompt.py
src/artificial_writer/gui/: __init__.py  __main__.py  app.py
src/artificial_writer/service/: __init__.py  auth.py  db.py  digests.py  feeds.py  models.py  quotas.py  repository.py  schemas.py  summarize_service.py
src/artificial_writer/service/jobs/: __init__.py  queue.py  scheduler.py  tasks.py
src/artificial_writer/summarizers/: factory.py  ollama.py
src/artificial_writer/web/: __init__.py  __main__.py  app.py
src/artificial_writer/web/routers/: __init__.py  auth.py  batch.py  digests.py  feeds.py  summarize.py
src/artificial_writer/web/templates/: 404.html  console.html  digest.html  index.html
tests/: conftest.py  test_auth.py  test_cli.py  test_e2e_flow.py  test_extractive.py  test_factory.py  test_fetcher.py  test_fetchers.py  test_jobs_batch.py  test_jobs_feeds.py  test_ollama.py  test_output_format.py  test_pipeline.py  test_pricing.py  test_quotas.py  test_repository.py  test_repository_fts.py  test_storage.py  test_web.py  test_web_account.py  test_web_auth.py  test_web_digests.py  test_web_feeds.py  test_web_quota.py
