[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artificial-writer"
version = "1.0.0"
description = "Fetch an article from a URL and summarize it with a pluggable, free-by-default summarizer (CLI, desktop GUI, and web UI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TymFly" }]
keywords = ["summarization", "nlp", "web-scraping", "llm", "tkinter", "fastapi", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

# Core runtime: works fully offline & free with the built-in extractive summarizer.
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Free local LLM via Ollama needs no extra Python deps (uses requests over HTTP).
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.40"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.31",
]
all = ["artificial-writer[openai,anthropic,web]"]

[project.urls]
Homepage = "https://github.com/TymFly/artificial_writer"
Repository = "https://github.com/TymFly/artificial_writer"

[project.scripts]
artwriter = "artificial_writer.cli.app:main"
artwriter-gui = "artificial_writer.gui.app:main"
artwriter-web = "artificial_writer.web.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
artificial_writer = ["py.typed", "web/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["artificial_writer"]
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
