[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artificial-writer"
version = "1.0.0"
description = "Fetch an article from a URL and summarize it with a pluggable, free-by-default summarizer (CLI, desktop GUI, and web UI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TymFly" }]
keywords = ["summarization", "nlp", "web-scraping", "llm", "tkinter", "fastapi", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

# Core runtime: works fully offline & free with the built-in extractive summarizer.
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Free local LLM via Ollama needs no extra Python deps (uses requests over HTTP).
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.40"]
pdf = ["pypdf>=4.0"]
youtube = ["youtube-transcript-api>=0.6"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]
# Multi-tenant service layer: async DB, auth, and migrations.
server = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",  # passlib 1.7.4 is incompatible with bcrypt>=4.1's backend probe
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.1",  # sync driver used by Alembic migrations
    "redis>=5.0",  # broker/result store for the RQ job queue
    "rq>=1.16",  # async batch jobs + feed polling workers
    "rq-scheduler>=0.13",  # periodic feed-poll scheduling
    "feedparser>=6.0",  # RSS/Atom parsing for feed polling
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
    "aiosqlite>=0.19",
    "fakeredis>=2.20",  # in-memory Redis for the job-queue tests
    "testcontainers[postgres]>=4.0",  # optional: real-Postgres FTS test (skips if unavailable)
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-passlib>=1.7",
]
all = ["artificial-writer[openai,anthropic,pdf,youtube,web,server]"]

[project.urls]
Homepage = "https://github.com/TymFly/artificial_writer"
Repository = "https://github.com/TymFly/artificial_writer"

[project.scripts]
artwriter = "artificial_writer.cli.app:main"
artwriter-gui = "artificial_writer.gui.app:main"
artwriter-web = "artificial_writer.web.__main__:main"
artwriter-worker = "artificial_writer.service.jobs.queue:run_worker"
artwriter-scheduler = "artificial_writer.service.jobs.scheduler:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
artificial_writer = ["py.typed", "web/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be called in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Form", "fastapi.Body"]

[tool.mypy]
python_version = "3.10"
packages = ["artificial_writer"]
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
